# jyutping-tools

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  pylangacq.nix  requirements.txt  result  turbo.json  wordseg.nix
.github/workflows/: jyutping-helpers.yml  microservice.yml  rscantonese.yml  update-artifect.yml  wikidump.yml  wikitext-cleaner.yml  wordseg.yml
.github/workflows/microservice/: audit.yml  coverage.yml
.github/workflows/setup-node/: action.yml
.github/workflows/shared-actions/: setup-node-ci.yml
.husky/: pre-commit
apps/web/: .gitignore  .lintstagedrc.cjs  README.md  jest.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json
apps/web/src/: app.html  global.d.ts  hooks.ts
apps/web/src/const/: index.ts
apps/web/src/data/: how-to-say-i-love-you.svelte.md
apps/web/src/lib/: Button.svelte  Faq.svelte  Layout.svelte  Output.svelte  PhaseBanner.svelte  Separator.svelte  Toast.svelte  const.ts  env.ts  format.test.ts  (+4 more)
apps/web/static/: manifest.json
blog/: README.md  package-lock.json  package.json  svelte.config.js
blog/src/routes/: __layout.svelte
chat-parser/: Cargo.toml  README.md
chat-parser/src/: chat_data.rs  corpus.rs  lib.rs  meta.rs  parser.rs  predicates.rs  token.rs
chat-parser/tests/: integration_test.rs
datasets/: .gitignore  Makefile  README.md  environment.yml  example.py  index.py  mock_data.txt
identity/: kratos.yml
identity/kratos/: kratos.yml
jyutping-helpers/: .lintstagedrc.cjs  flake.nix  index.test.ts  index.ts  jest.config.cjs  package-lock.json  package.json
jyutping-helpers/.github/workflows/: test.yml
jyutping-microservice/: .env.sample  Cargo.toml  Makefile  flake.nix  image.nix
jyutping-microservice/migrations/: 20220319121708_unknown_token.sql  20220320121326_known_token.sql.sql
jyutping-microservice/src/: main.rs
jyutping-microservice/src/middlewares/: cache.rs
jyutping-microservice/src/routes/: convert.rs  coverage.rs  health_check.rs  mod.rs  parse.rs  segment.rs  train.rs  types.rs
jyutping-microservice/src/services/: known.rs  mod.rs  unknown.rs
microservice/: .gitignore  Cargo.toml  README.md  build.sh  flake.nix  image.nix  pycantonese.nix  run.sh
microservice/.github/workflows/: audit.yml  coverage.yml
microservice/src/: build.rs  main.rs
microservice/src/middlewares/: cache.rs  mod.rs
microservice/src/routes/: convert.rs  mod.rs  segment.rs  types.rs
microservice/src/services/: mod.rs
notes/: ml.md  nlp-specific.md
pycantonese/: .gitignore  Makefile  README.md  dataset.py  dummy.txt  dummy_dataset.txt  dummy_unwanted_token.txt  environment.yml  index.py  model.py  tokenizer.py
pycantonese/examples/: dataset.py  incompatible_tokenizer.py  model.py  tokenizer.py
rscantonese/: Cargo.toml  Makefile  README.md  flake.nix  link.sh
rscantonese/.github/workflows/: wikitext-cleaner.yml
rscantonese/data/wikidump/: wikitext.raw
rscantonese/data/words.hk/: README.md  charlist.json  postprocess.ts  wordslist.json
rscantonese/src/: constant.rs  data.rs  lib.rs  token.rs  transformer.rs  utils.rs
rscantonese/src/wordseg/: mod.rs
rscantonese/tests/: config.json  integration_test.rs  rs_integration.rs
variant-map-parser/: Cargo.toml
variant-map-parser/src/: lib.rs
wasmcantonese/: Cargo.toml
wasmcantonese/src/: lib.rs
web/: .lintstagedrc.cjs  README.md  flake.nix  package-lock.json  package.json  svelte.config.js
web/.github/workflows/: build_nix.yml
web/src/: global.d.ts
web/src/lib/: Button.svelte  Faq.svelte  Input.svelte  Layout.svelte  MetaData.svelte  Output.svelte  Separator.svelte  Textarea.svelte  Toast.svelte  const.ts  env.ts  format.ts  handler.ts  helper.ts  toast.ts  types.ts  vars.scss
web/src/routes/: __layout.svelte  credits.svelte  index.svelte
wikitext-cleaner/: Cargo.toml  Makefile  README.md
wikitext-cleaner/examples/: dummy  safe_variant.json
wikitext-cleaner/src/: lib.rs  main.rs
wordseg/: Cargo.toml  Makefile  README.md  flake.nix
wordseg/benches/: benchmark.rs
wordseg/src/: lib.rs
wordseg/tests/: integration_test.rs
workflows/: wikitext-cleaner.yml
(+34 files in other folders)
