[package]
name = "jyutping-microservice"
version = "0.1.0"
edition = "2021"
#NOTE Use build script to get compiled time
#REF https://aeshirey.github.io/code/2021/02/13/adding-build-time-into-your-rust-package.html
build = "./src/build.rs"

[dependencies]
actix-web = "4.0.0-rc.3"
actix-cors = "0.6.0-beta.8"
serde = { version = "1.0.130", features = [ "derive" ] }
env_logger = "0.9.0"
derive_more = "0.99.16"
rscantonese = { path = "../rscantonese"}
#NOTE For middleware, can be extracted later
actix-service = "2.0.2"
futures = "0.3.19"
#NOTE For reporting unmatched word
sqlx = { version = "0.5.11", features = [ "postgres", "runtime-actix-rustls" ] }

[build-dependencies]
actix-web = "4.0.0-rc.3"
