[package]
name = "jyutping-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.15.1", features = [ "auto-initialize"] }
actix-web = "4.0.0-beta.19"
serde = "1.0.130"
env_logger = "0.9.0"
derive_more = "0.99.16"
#TODO Memoize input for better performance
cached = "0.29.0"
