[package]
name = "jyutping-microservice"
version = "0.1.0"
edition = "2021"
#NOTE Use build script to get compiled time
#REF https://aeshirey.github.io/code/2021/02/13/adding-build-time-into-your-rust-package.html
build = "./src/build.rs"

[dependencies]
pyo3 = { version = "0.15.1", features = [ "auto-initialize"] }
actix-web = "4.0.0-beta.20"
actix-cors = "0.6.0-beta.8"
serde = { version = "1.0.130", features = [ "derive" ] }
env_logger = "0.9.0"
derive_more = "0.99.16"
#TODO Memoize input for better performance
cached = "0.29.0"
#NOTE For middleware, can be extracted later
actix-service = "2.0.2"
futures = "0.3.19"

[build-dependencies]
actix-web = "4.0.0-beta.20"

[profile.release]
lto = "thin"
