[package]
name = "rscantonese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
tests = []

[dependencies]
wordseg = { path = "../wordseg"}
# Dependencies for hkcancor
chat-parser = { path = "../chat-parser"}
include_dir = { version = "0.7.2", features = [ "glob" ] }
serde = { version = "1.0.130", features = [ "derive" ], optional = true }

[dev-dependencies]
criterion = "0.3.5"

