[package]
name = "rscantonese"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
tests = []

[dependencies]
tokenizers = { version = "0.11.3", features = [ "http" ] }
reqwest = { version = "0.11.10" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros"] }